== Affiliates - Changelog ==

= 4.18.0 =
* WordPress 6.2 compatible.
* Requires at least WordPress 5.9.

= 4.17.0 =
* WordPress 6.1 compatible.
* Requires at least WordPress 5.8.
* Avoids emptying the affiliate name when the related user's name data is empty on profile update.
* Showing affiliate ID along with name in Referrals section.

= 4.16.0 =
* WordPress 6.0 compatible.
* WordPress 6.1 compatible (last tested with 6.1-alpha-53814).
* WordPress 6.1 compatibility, fixed multiple instances of LIKE queries causing database errors.
* PHP 8.x compatibility, avoided several instances of deprecation warnings due to inconsistent function signature across PHP versions on third parameter of preg_split expecting int instead of null.
* Removed mention of deprecated Affiliates PayPal integration in readme.txt.
* Fixed various issues with the registration widget: a PHP warning caused by a missing array key, a superfluous parameter in the form rendering call and a database error when searching for the terms page by title with PHP 8.x.

= 4.15.0 =
* WordPress 6.0 compatible.
* Code cleanup, fixed trailing whitespace.
* Fixed missing code doc bits.
* Fixed code doc format issues.
* Fixed potential PHP 8.x compatibility issues when using null-parameter-sensitive math functions.
* Fixed affiliates dashboard overview recent earnings to use appropriate decimals for display.

= 4.14.0 =
* WordPress 6.0 compatible.
* Tested with WordPress 6.1-alpha.
* PHP 8.1 compatibility fixed an instance of deprecated passing null to bcadd().
* PHP 8.1 compatibility guarded an instance of str_replace() against deprecated passing null to parameter #2.
* Reviewed nonce handling for missing nonces in requests.

= 4.13.0 =
* WordPress 6.0 compatible.
* PHP 8.1 compatibility fixed deprecated passing null to stripslashes().
* PHP 8.1 compatibility fixed deprecated passing null to strcmp().
* PHP 8.1 compatibility fixed deprecated passing null to trim().

= 4.12.0 =
* WordPress 6.0 compatible.